Fixed issue with IE text overflow

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -76,6 +76,7 @@ $footer-font-color: #91a2bd;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  flex-flow: wrap;
 }
 
 
